# jsoncdc

./: .gitignore  .travis.yml  Cargo.toml  Makefile
jsoncdc/: Cargo.toml  Makefile
jsoncdc/src/: lib.rs
pgrustxn/: Cargo.toml  README
pgrustxn/src/: decoder.rs  lib.rs  texttools.rs
rpg/: Cargo.toml
rpg/rpg94-sys/: Cargo.toml
rpg/rpg95-sys/: Cargo.toml
rpg/src/: decoder.rs  lib.rs  schematricks.rs  texttools.rs
src/: json_decoder.rs  lib.rs
test/expected/: text.out
util/: generate_bindings  travis
