[package]
name = "jsoncdc"
version = "0.0.8"
authors = ["Alex Newman <posi@planet.com>",
           "Jason Dusek <jason.dusek@gmail.com>"]
build = "build.rs"

[lib]
name = "jsoncdc"
crate-type = ["dylib"]

[dependencies]
libc = "*"
rpg = { path = "rpg", features = ["pg95"] }
rpg95-sys = { path = "rpg/rpg95-sys" }

[build-dependencies]
gcc = "*"
