[package]
name = "rpg"
license = "Apache-2.0"
version = "0.0.8"
authors = ["Alex Newman <posi@planet.com>"] #TODO get jason to add his name :)
description   = "Postgresql extensions"
documentation = "http://rustdoc.s3-website-us-east-1.amazonaws.com/jsoncdc/v0.0.7/jsoncdc/"
homepage      = "https://github.com/posix4e/jsoncdc"
repository    = "https://github.com/posix4e/jsoncdc"
readme        = "README.md"
keywords      = ["postgres"]

[features]
pg94 = ["rpg94-sys"]
pg95 = ["rpg95-sys"]

[dev-dependencies]
rustfmt = "0.4"

[dependencies]
rpg94-sys = { path = "rpg94-sys" , optional = true }
rpg95-sys = { path = "rpg95-sys" , optional = true }
